2013-06-12  Sancho Lerena <slerena@artica.es>

	* extensions/plugin_registration.php: Added link to file manager
	to upload plugin files using the file manager.

2013-06-12 Mario Pulido <mario.pulido@artica.es>
	
	* pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql,
        pandoradb_data.sql: Change path in command alert.

2013-06-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Added node access control to
	alerts view in metaconsole

	* operation/tree.php
	operation/events/events.build_table.php: Visual fixes

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php:
	fixed the free text search when there is characters as "(".

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php,
	operation/reporting/reporting_viewer.php,
	operation/netflow/nf_live_view.php: added lost help tips for the
	formats time and date.

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/insert_data.php,
	godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php,
	include/ajax/module.php, include/constants.php, operation/tree.php,
	operation/netflow/nf_live_view.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php,
	operation/agentes/datos_agente.php: fixed the date and time format
	and set a help tip to say the Pandora's format.

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: revert completly the
	"html_print_image".

2013-06-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_html.php: revert my own changes in
	"html_print_image", the code didn't run fine.
	
	* operation/tree.php: fixed the params to call the function.
