@@ -1121,7 +1121,7 @@ END;;
 BEGIN
 LOCK TABLE talert_actions IN EXCLUSIVE MODE;
 INSERT INTO talert_actions (id, name, id_alert_command, field1, field2, field3, id_group, action_threshold) VALUES (1,'Mail&#x20;to&#x20;XXX',1,'yourmail@domain.es','[PANDORA] Alert from agent _agent_ on module _module_','',0,0);
-INSERT INTO talert_actions (id, name, id_alert_command, field1, field2, field3, id_group, action_threshold) VALUES (2,'Restart&#x20;agent',10,'REFRESH AGENT','','',0,0);
+INSERT INTO talert_actions (id, name, id_alert_command, field1, field2, field3, id_group, action_threshold) VALUES (2,'Restart&#x20;agent',10,'REFRESH AGENT *','','',0,0);
 INSERT INTO talert_actions (id, name, id_alert_command, field1, field2, field3, id_group, action_threshold) VALUES (3,'Pandora&#x20;FMS&#x20;Event',3,'','','',0,0);
 COMMIT;
 END;;
