@@ -1,3 +1,9 @@
+2013-06-12 Mario Pulido <mario.pulido@artica.es>
+
+        * pandoradb.data.postgreSQL.sql,
+        pandoradb.data.oracle.sql,
+        pandoradb_data.sql: Repair windows bug in "Restart Agent" action
+
 2013-06-12  Sancho Lerena <slerena@artica.es>
 
 	* extensions/plugin_registration.php: Added link to file manager
